--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
-# Project exclude paths
-/project/target/
-/target/
+*.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.idea
+.bloop
+.bsp
+.metals
+metals.sbt
+.vscode
+
