--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,37 @@
-akka {
-  loglevel = INFO
-  actor {
-    debug {
-      receive = off
-    }
-  }
-}
+#akka {
+#  loglevel = DEBUG
+#  actor {
+#    allow-java-serialization = on
+#    debug {
+#      receive = on
+#    }
+#    allow-java-serialization = on
+#    provider = "cluster"
+#  }
+#  persistence {
+#    journal.leveldb.native = off
+#    journal.plugin = "akka.persistence.journal.leveldb"
+#    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+#    journal.leveldb.dir = "target/journal"
+#    snapshot-store.local.dir = "target/snapshots"
+#  }
+#  remote.artery {
+#    canonical {
+#      hostname = "127.0.0.1"
+#      port = 0
+#    }
+#  }
+#  cluster {
+#    seed-nodes = [
+#      "akka://ProductCatalog@127.0.0.1:2551",
+#    ]
+
+    #downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+#  }
+#}
+
+
+#productcatalog.akka.remote.artery.canonical.port = 2551
 
 // Cluster configuration
 cluster-default {
@@ -25,9 +51,9 @@ cluster-default {
 
     cluster {
       seed-nodes = [
-        "akka://ClusterWorkRouters@127.0.0.1:2551",
         "akka://ClusterWorkRouters@127.0.0.1:2552",
-        "akka://ClusterWorkRouters@127.0.0.1:2553"]
+        "akka://ClusterWorkRouters@127.0.0.1:2553",
+        "akka://ClusterWorkRouters@127.0.0.1:2554"]
 
 
       downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
